Unnecessary left text alignment causing issues with utility alignment classes.

--- a/less/components/grid.less
+++ b/less/components/grid.less
@@ -26,7 +26,6 @@
 
 .container .row .col {
 	float: left;
-	text-align: left;
 	padding: 0 @right-gutter 0 @left-gutter;
 	display: inline;
 	min-height: 1px;
